--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
 	"bin": "./out/cli.js",
 	"files": [],
 	"scripts": {
-		"start": "node --max-old-space-size=32384 --require ts-node/register --require tsconfig-paths/register src/cli.ts",
+		"start": "node --max-old-space-size=32384 --require ts-node/register --require tsconfig-paths/register --inspect=5870 src/cli.ts --allow-http=true --host=127.0.0.1 --no-auth==true",
 		"build": "rm -rf ./out && ../../node_modules/.bin/cross-env CLI=true UV_THREADPOOL_SIZE=100 node --max-old-space-size=32384 ../../node_modules/webpack/bin/webpack.js --config ./webpack.config.js",
 		"build:binary": "ts-node scripts/nbin.ts"
 	},
@@ -19,6 +19,7 @@
 		"pem": "^1.14.1",
 		"promise.prototype.finally": "^3.1.0",
 		"safe-compare": "^1.1.4",
+		"spdlog": "^0.9.0",
 		"ws": "^6.1.2",
 		"xhr2": "^0.1.4"
 	},
