--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,5 +2,8 @@
   "name": "@coder/web",
   "scripts": {
     "build": "../../node_modules/.bin/cross-env UV_THREADPOOL_SIZE=100 node --max-old-space-size=32384 ../../node_modules/webpack/bin/webpack.js --config ./webpack.config.js"
+  },
+  "dependencies": {
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
